<resources>
    <string name="app_name">Carros_Material</string>
    <string name="guardar_carros">Guardar Carros</string>
    <string name="action_settings">Settings</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="placa">Placa</string>
    <string name="precio">Precio</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="azul">Azul</string>

    <string name="chevrolet">Chevrolet</string>
    <string name="audi">Audi</string>
    <string name="toyota">Toyota</string>
    <string name="kia">Kia</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="informacion">Datos del Carro</string>
    <string name="existe_placa">La placa de carro ya esta registrada</string>
    <string name="mo_2016">2016</string>
    <string name="mo_2005">2005</string>
    <string name="mo_2014">2014</string>
    <string name="mo_2018">2018</string>

    <string name="crear">Registrar Carros</string>
    <string name="listar">Listar Carros</string>
    <string name="mensaje_error_placa">Ingrese Placa</string>
    <string name="mensaje_error_precio">Ingrese Precio</string>
    <string name="mensaje_guardado">Carro Guardado con exito</string>
    <string name="mensaje_modificado">Carro Modificado con exito</string>
    <string name="datos_carro">Datos del Carro</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>

    <string-array name="array_madelo">
        <item>@string/mo_2016</item>
        <item>@string/mo_2005</item>
        <item>@string/mo_2014</item>
        <item>@string/mo_2018</item>
    </string-array>

    <string-array name="array_color">
        <item>@string/azul</item>
        <item>@string/negro</item>
        <item>@string/blanco</item>

    </string-array>

    <string-array name="array_marca">
        <item>@string/chevrolet</item>
        <item>@string/audi</item>
        <item>@string/toyota</item>
        <item>@string/kia</item>
    </string-array>
    <string name="title_activity_detalle__persona">Detalle_Persona</string>
    <string name="color">Color</string>
    <string name="titulo_eliminar_mensaje">Eliminar Carro</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar este carro ?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="modificar_carro">Modificar Carro</string>
    <string name="cancelar">Cancelar</string>


</resources>
