<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.carros_material.Guardar_Carros"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:text="@string/guardar_carros"
        android:textAlignment="center"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaplaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtplaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placa"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/spmarca"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spmodelo"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spcolor"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/precio"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnborrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />
    </LinearLayout>
</LinearLayout>
